# anchor-voting

./: .env  .eslintrc.js  .gitignore  README.md  keypair.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
anchor-voting/: .gitignore  Anchor.toml  package.json
anchor-voting/programs/anchor-voting/: Cargo.toml
anchor-voting/programs/anchor-voting/src/: lib.rs
anchor-voting/tests/: anchor-voting.ts
components/: create_proposal.tsx  layout.tsx  navbar.tsx  proposal_item.tsx  proposal_list.tsx  requestAirdrop.tsx  vote_list.tsx  wallet.tsx  wallet_item.tsx
context/: WalletConnectionProvider.tsx
pages/: [campaign_id].tsx  [proposalId].tsx  _app.tsx  create.tsx  index.tsx
pages/api/: proposal.ts
program/: Anchor.toml
program/programs/program/: Cargo.toml
program/programs/program/src/: lib.rs
scripts/: copyIdl.js
solana/: idl.json  index.ts
styles/: globals.css
